--- a/packages/alias/package.json
+++ b/packages/alias/package.json
@@ -16,7 +16,7 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=14.0.0"
   },
   "scripts": {
     "build": "rollup -c",
@@ -45,17 +45,17 @@
     "alias"
   ],
   "peerDependencies": {
-    "rollup": "^1.20.0||^2.0.0"
+    "rollup": "^1.20.0||^2.0.0||^3.0.0"
   },
   "dependencies": {
-    "slash": "^3.0.0"
+    "slash": "^4.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^8.4.0",
-    "@rollup/plugin-typescript": "^5.0.2",
-    "del-cli": "^3.0.1",
-    "rollup": "^2.67.3",
-    "typescript": "^4.1.2"
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "del-cli": "^5.0.0",
+    "rollup": "^3.0.0-7",
+    "typescript": "^4.8.3"
   },
   "types": "types/index.d.ts",
   "ava": {
