--- a/packages/auto-install/package.json
+++ b/packages/auto-install/package.json
@@ -15,6 +15,9 @@
   "bugs": "https://github.com/rollup/plugins/issues",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "build": "rollup -c",
     "ci:coverage": "nyc pnpm test && nyc report --reporter=text-lcov > coverage.lcov",
@@ -44,14 +47,14 @@
     "modules"
   ],
   "peerDependencies": {
-    "rollup": "^1.20.0||^2.0.0"
+    "rollup": "^1.20.0||^2.0.0||^3.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^8.4.0",
-    "@rollup/plugin-typescript": "^5.0.2",
-    "del": "^5.1.0",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "del": "6.1.1",
     "node-noop": "^1.0.0",
-    "rollup": "^2.67.3",
+    "rollup": "^3.0.0-7",
     "typescript": "^4.1.2"
   },
   "types": "types/index.d.ts",
